# Podcast

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app_core/: mod.rs
src-tauri/src/audio_engine/: decoder.rs  engine.rs  mixer.rs  mod.rs  recorder.rs  scheduler.rs
src-tauri/src/commands/: devices.rs  mixer.rs  mod.rs  pads.rs  projects.rs  recording.rs
src-tauri/src/domain/: mixer.rs  mod.rs  pad.rs  project.rs  session.rs
src-tauri/src/project_store/: mod.rs
src/components/: BankSelector.tsx  DevicesPanel.tsx  LevelMeter.tsx  MixerPanel.tsx  PadEditor.tsx  PadGrid.tsx  ProjectPanel.tsx  RecordingBar.tsx
src/lib/: tauri.ts
src/store/: index.ts
src/types/: index.ts
