[package]
name = "podcast-console"
version = "0.1.0"
description = "Podcast Console - Live production app for podcasters"
authors = ["PodcastConsole"]
edition = "2021"

[lib]
name = "podcast_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "wav", "all-codecs"] }
rubato = "0.15"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hound = "3"
anyhow = "1"
thiserror = "1"
once_cell = "1"
dirs = "5"
